--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@tanstack/react-query": "^5.62.11",
     "axios": "^1.7.9",
+    "i18next": "^24.2.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.4.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^7.1.1"
   },
